synopsis:     "RV dependency graph plugin for Coq"
opam-version: "2.0"
maintainer:   "palmskog@gmail.com"
authors:      ["Karl Palmskog" "Yves Bertot" "Anne Pacelet"]
homepage:     "https://github.com/palmskog/rvdpdgraph"
bug-reports:  "https://github.com/palmskog/rvdpdgraph/issues"
dev-repo:     "git+https://github.com/palmskog/rvdpdgraph"
license:      "LGPL-2.1-only"

depends: [
  "ocaml"         { >= "4.07.1"            }
  "coq"           { >= "8.12.0" & < "8.13" }
  "dune"          { >= "2.5"               }
  "ocamlgraph"    { >= "2.0.0"             }
]

build: [ "dune" "build" "-p" name "-j" jobs ]
