opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/palmskog/rvdpdgraph"
dev-repo: "git+https://github.com/palmskog/rvdpdgraph"
bug-reports: "https://github.com/palmskog/rvdpdgraph/issues"
license: "LGPL-2.1-only"

synopsis: "RV dependency graph plugin for Coq"
description: """
Modified version of dpdgraph Coq plugin,
with full path links for coqdoc compatibility.
"""

build: [ "dune" "build" "-p" name "-j" jobs ]
depends: [
  "ocaml"         { >= "4.07.1"            }
  "coq"           { >= "8.15" & < "8.16"   }
  "dune"          { >= "2.5"               }
  "ocamlgraph"    { >= "2.0.0"             }
]

authors: [
 "Anne Pacalet"
 "Yves Bertot"
 "Olivier Pons"
 "Karl Palmskog"
]
