(ocamllex dpd_lex)

(ocamlyacc dpd_parse)

(executable
 (name dpdusage)
 (public_name rvdpdusage)
 (libraries coq-rvdpdgraph.rvdpdlib)
 (package coq-rvdpdgraph)
 (modules dpdusage))

(executable
 (name dpd2dot)
 (public_name rvdpd2dot)
 (libraries coq-rvdpdgraph.rvdpdlib)
 (package coq-rvdpdgraph)
 (modules dpd2dot))

(library
 (name rvdpdlib)
 (public_name coq-rvdpdgraph.rvdpdlib)
 (libraries ocamlgraph)
 (modules dpd_compute dpd_lex dpd_parse version dpd_dot))


