(ocamllex dpd_lex)

(ocamlyacc dpd_parse)

(executable
 (name rvdpdusage)
 (public_name rvdpdusage)
 (libraries coq-rvdpdgraph.rvdpdlib)
 (package coq-rvdpdgraph)
 (modules rvdpdusage))

(executable
 (name rvdpd2dot)
 (public_name rvdpd2dot)
 (libraries coq-rvdpdgraph.rvdpdlib)
 (package coq-rvdpdgraph)
 (modules rvdpd2dot))

(library
 (name rvdpdlib)
 (public_name coq-rvdpdgraph.rvdpdlib)
 (libraries ocamlgraph)
 (flags :standard -w -3)
 (modules dpd_compute dpd_lex dpd_parse version dpd_dot))
